# mneme

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  migrate_add_comparison_results.sql  migrate_add_extra_context.sql  migrate_add_extra_context_type.sql  mneme-benchmark-protocol.docx  requirements.txt  schema.sql
mneme-project-memory/: .env.example  CHANGELOG.md  README.md  demo.py  pyproject.toml  requirements.txt
mneme-project-memory/examples/: demo_tasks.json  project_memory.json  prompt_clean.txt  prompt_violation.txt
mneme-project-memory/mneme/: __init__.py  __main__.py  adr_compiler.py  adr_freshness.py  adr_import.py  adr_parser.py  benchmark.py  benchmark_report.py  benchmark_schemas.py  benchmark_verifier.py  cli.py  conflict_detector.py  context_builder.py  cursor_generator.py  decision_retriever.py  enforcer.py  evaluator.py  llm_adapter.py  memory_store.py  pipeline.py  retriever.py  schemas.py
mneme-project-memory/scripts/: install_claude_code.py
mneme-project-memory/tests/: conftest.py  test_adr_compile_integration.py  test_adr_freshness.py  test_adr_import.py  test_adr_import_e2e.py  test_adr_parser.py  test_adr_validator.py  test_benchmark.py  test_benchmark_report.py  test_benchmark_schemas.py  test_benchmark_verifier.py  test_check_modes.py  test_cli.py  test_cli_adr_import.py  test_cli_benchmark.py  test_cli_check_freshness.py  test_conflict_detector.py  test_context_builder_decisions.py  test_cursor_generate.py  test_decision_retriever.py  test_drift_detection.py  test_enforcer.py  test_example_memory.py  test_pipeline.py  (+3 more)
(+590 files in other folders)
