[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "0.1.0"
description = "Portable project memory and evaluation nucleus for AI workflows"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mneme*"]
